2016-03-01         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (print_instruction): For Op_comment, add notation as
	to whether it's a full comment or an end of line comment.

2016-02-29         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pp_list): Handle the case of nargs equal to zero.
	Thanks to Hermann Peifer for the report.

2016-02-28         Arnold D. Robbins     <arnold@skeeve.com>

	* profile.c (pprint): Fix copy-paste error in else handling.
	Thanks to Michal Jaegermann for the report.

2016-02-23         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.rpath, config.sub: Update to latest
	from GNULIB.

2016-02-23         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Update full list of infrastructure tools.

2016-02-22        gettextize             <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.7.

2016-02-21         Arnold D. Robbins     <arnold@skeeve.com>

	* regexec.c (prune_impossible_nodes): Remove attribute that
	keeps it from compiling with 32 bit GCC. Who the heck knows
	why or how. Sigh. Double sigh.

2016-02-20         Arnold D. Robbins     <arnold@skeeve.com>

	* regcomp.c, regex.c, regex.h, regex_internal.c, regex_internal.h,
	regexec.c: Sync with GLIBC, mostly prototype changes.

2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>

	Fix profile / pretty-printing to chain else-ifs.

	* profile.c (pprint): Change third argument into a set of flags
	for in the for header or in an else if. Adjust case Op_K_else to
	make the right checks and format the code properly. In Op_K_if
	clear the flag so that any following else gets indented properly.
	Adjust all calls.

2016-02-14         Arnold D. Robbins     <arnold@skeeve.com>

	* README, NEWS: Updated to reflect use of Texinfo 6.1.

	Unrelated:

	* configure.ac: Switch to AC_PROG_CC_C99 to enable C99
	compilation and features.
	* dfa.c: Sync with GNU grep, go back to C99 style declarations
	at point of use.
