@@ -1,3 +1,8 @@
+2016-03-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* debug.c (print_instruction): Improvements in instruction dump
+	for if and else.
+
 2016-03-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c (print_instruction): For Op_comment, add notation as
